Update page templates. Fix menu spacing by deleting dropdowns. Scrollbar needs color change.

--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ $purple: #7B3FFC;
 $green: #A2D936;
 $orange: rgba(255,150,42,1);
 $light-blue: #00C7FF;
+$dark-blue: rgb(0,0,96);
 $background-color: #FFF;
 $hover-color: #9a3eeb;
 $pink2blue: linear-gradient(0deg,$pink 0%, $blue 50%);
@@ -98,14 +99,13 @@ input[type="color"]:focus,
 
 /* Track */
 ::-webkit-scrollbar-track {
-  border-left: none;
   background-color: $pink;
+  margin-left: 2px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: $purple;
-  border-left: none;
+  background: $blue;
   border-radius: $body-curve;
 }
 
@@ -366,7 +366,7 @@ footer {
 
 .menu {
   display: none;
-  background-color: rgb(0,0,96);
+  background-color: $dark-blue;
   color: #fff;
   position: fixed;
   top: calc(#{$navbar-height-sm} + (#{$page-padding} / 2));
@@ -446,10 +446,9 @@ a.dropdown-item {
 
 .menu-shape {
   color: $pink;
-  font-size: 22px;
+  font-size: 26px;
   opacity: 0;
   margin-left: $page-padding;
-  margin-top: 2px;
 }
 
 .dropdown-toggle::after {
